--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
      - checkout
      - run:
          command: source /okta_venv/bin/activate;
+                 ./scripts/run_terraform.sh $TRAINING_COHORT alerting apply -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT base_networking apply -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT bastion apply -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT training_bucket apply -input=false -auto-approve;
