km: adding cloudwatch alarms for wrong applications in streaming queue

--- a/modules/training_emr_cluster/emrclusterconfig.json
+++ b/modules/training_emr_cluster/emrclusterconfig.json
@@ -16,5 +16,11 @@
     "Properties": {
       "yarn.resourcemanager.scheduler.class": "org.apache.hadoop.yarn.server.resourcemanager.scheduler.capacity.CapacityScheduler"
     }
+  },
+  {
+    "Classification": "spark",
+    "Properties": {
+      "maximizeResourceAllocation": "true"
+    }
   }
 ]
