lj/ap/jp/km: reconfiguring

--- a/modules/training_emr_cluster/emrclusterconfig.json
+++ b/modules/training_emr_cluster/emrclusterconfig.json
@@ -20,7 +20,13 @@
   {
     "Classification": "spark",
     "Properties": {
-      "maximizeResourceAllocation": "true"
+      "maximizeResourceAllocation": "false"
+    }
+  },
+  {
+    "Classification": "spark-defaults",
+    "Properties": {
+      "spark.dynamicAllocation.enabled": "false"
     }
   }
 ]
